Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-web
  labels:
    app: nodejs-web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nodejs-web
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 20%
      maxUnavailable: 20%
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: nodejs-web
    spec:
      containers:
      - name: nodejs-web
        image: chenchi77/nodejs-web:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
