Ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-ingress
spec:
  rules:
  - host: web.chi
    http:
      paths:
      - backend:
          serviceName: web-service
          servicePort: 80
